Fix some issues with overflow in .color and shadows

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -299,7 +299,10 @@ body {
         justify-content: center;
         flex-direction: column;
         text-transform: uppercase;
-        box-shadow: 0px 0 15px #00000080;
+        overflow: hidden;
+        @media only screen and (min-width: 1375px) {
+            box-shadow: 0px 0 15px #00000080;
+        }
         padding: 2em 0;
         flex: 1;
         transition: all 200ms ease-out;
